<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/tvSongID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_id" />

    <EditText
        android:id="@+id/etSongID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:focusable="false"
        android:clickable="false"
        android:textColor="#808080"/>


    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


    <TextView
        android:id="@+id/tvSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSingers"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvYear"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvStar"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/rgStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3" />

        <RadioButton
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
